<resources>
    <string name="app_name" translatable="false">Cookwriter</string>
    <string name="err_quantity_invalid_fraction">Quantity in fraction must be in this form: number/number</string>
    <string name="err_quantity_invalid_integer">Whole quantity must be a whole number</string>
    <string name="err_time_invalid_format">Time malformed. Correct format for example 1 day, 3 hours and 20 minutes is: 1d 3h 20m</string>
    <string name="season_winter">Winter</string>
    <string name="season_spring">Spring</string>
    <string name="season_summer">Summer</string>
    <string name="season_autumn">Autumn</string>
    <string name="season_all">All seasons</string>
    <string name="recipes">Recipes</string>
    <string name="list_recipes">List recipes</string>
    <string name="write_recipes">Write a recipe</string>
    <string name="difficulty_brainless">Brainless</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_normal">Normal</string>
    <string name="difficulty_delicate">Delicate</string>
    <string name="difficulty_expert">Expert</string>
    <string name="price_free">Free</string>
    <string name="price_low_budget">Low budget</string>
    <string name="price_affordable">Affordable</string>
    <string name="price_expensive">Expensive</string>
    <string name="price_top_of_the_shelf">Top of the shelf</string>
    <string name="recipes_list">Recipes list</string>
    <string name="recipes_write">Write a recipe</string>
    <string name="recipes_readonly">Recipe viewer</string>
    <string name="recipes_delete_content_description">Delete this recipe</string>
    <string name="recipes_edit_content_description">Edit this recipe</string>
    <string name="recipes_create_content_description">Create a recipe</string>
    <string name="by">by</string>
    <string name="seconds_short">s</string>
    <string name="minutes_short">m</string>
    <string name="hours_short">h</string>
    <string name="days_short">d</string>
    <string name="recipe_clean_name">Clean name</string>
    <string name="recipe_clean_name_hint">Give a short name to your recipe</string>
    <string name="recipe_clean_name_error_empty">Clean name cannot be empty</string>
    <string name="recipe_custom_name">Custom name</string>
    <string name="recipe_custom_name_hint">Give a joyful name to your recipe</string>
    <string name="recipe_custom_name_error_empty">Custom name cannot be empty</string>
    <string name="recipe_description">Description</string>
    <string name="recipe_description_hint">Give a description to your recipe</string>
    <string name="recipe_source">Source</string>
    <string name="recipe_source_hint">Give a source from where you took the recipe</string>
    <string name="recipe_total_duration">Total duration</string>
    <string name="recipe_total_duration_hint">Indicate the total duration of your recipe</string>
    <string name="recipe_total_duration_error_empty">Total duration cannot be empty</string>
    <string name="recipe_total_duration_error_format">Total duration in the wrong format. Example: 1h 20m</string>
    <string name="recipe_season">Season</string>
    <string name="recipe_difficulty">Difficulty</string>
    <string name="recipe_price">Price</string>
    <string name="recipe_steps">Steps</string>
    <string name="recipe_step_number">Step %d:</string>
    <string name="recipe_step_description_hint">What to do in this step ?</string>
    <string name="recipe_step_delete_content_description">Delete this step</string>
    <string name="recipe_add_step">Add a step</string>
    <string name="recipe_error_missing_field">A mandatory field is empty of incorrect</string>
    <string name="save">Save</string>
</resources>
